examples/test/testpolicy14343.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14343
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key41: value42
      key16: value13
      key6: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
          key2: value21
          key4: value40
      podSelector:
        matchLabels:
          key15: value45
          key38: value13
          key18: value41
